--- a/css/reset.css
+++ b/css/reset.css
@@ -20,7 +20,7 @@
 }
 
 @font-face {
-    font-family: yuwei;
+    font-family: "YuWei";
     src: url('../fonts/YuWei/YuWeiShuFaXingShuJianTi.ttf')
 }
 
