--- a/css/reset.css
+++ b/css/reset.css
@@ -12,7 +12,7 @@
 .iconfont {
     font-family: "iconfont" !important;
     font-size: 16px;
-    color: var(--txt-wran-color);
+    /* color: var(--txt-wran-color); */
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
@@ -25,8 +25,13 @@
 }
 
 @font-face {
-    font-family: monospace;
+    font-family: "monospace";
     src: url('../fonts/monospace/Elronmonospace.ttf')
+}
+
+@font-face {
+    font-family: "poppins";
+    src: url('../fonts/poppins/Poppins-Light.ttf')
 }
 
 * {
