--- a/css/reset.css
+++ b/css/reset.css
@@ -73,3 +73,12 @@ input, button, textarea {
     font-family: monospace, 'Courier New', Courier, monospace;
     font-size: 14px;
 }
+
+.dom-center {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
